# TINF22F_Team4_EDZ_Viewer_and_Converter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  angular.json  deny.toml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
Backend/: .env  app.js  file.js  package-lock.json  package.json  token.js
Frontend/: package-lock.json  package.json
Frontend/src/: index.html
Frontend/src/app/: app-routing.module.ts  app.module.ts
Frontend/src/app/interfaces/: archive-information.ts  package-information.ts
Frontend/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.ts
Frontend/src/app/pages/file-upload/: file-upload.component.html  file-upload.component.ts
Frontend/src/app/pages/viewer/: viewer.component.html  viewer.component.ts
Frontend/src/app/services/: backend.service.ts
Frontend/src/app/shared/card/: card.component.html  card.component.ts
Frontend/src/app/shared/navigation/: navigation.component.html
Frontend/src/assets/: allArchives.json  archives.json  packages.json
Sqlite/: EDZ-Datenbank.db
assets/: template.aasx  template.hbs
example_edz_file/MURR.7000-88601-0000000/items/macro/MURR/Connection-Technology/T-coupler/Signal/: 7000-88601-0000000.ema
example_edz_file/MURR.7000-88601-0000000/items/partxml/: EDS.Part.EPLANAuxiliaryPart.propertydefinition.xml  EDS.Part.ItemDoesNotNeed3DMacro.propertydefinition.xml  EDS.Part.ItemDoesNotNeedDrill.propertydefinition.xml  MURR.7000-88601-0000000.part.xml  MURR.manufacturer.xml
examples/: 2320034.edz  2320102.edz  2866284.edz  2905009.edz  files.json  packages.json
examples/MURR.7000-88601-0000000/: manifest.xml
examples/MURR.7000-88601-0000000/items/partxml/: EDS.Part.ItemDoesNotNeedCPP.propertydefinition.xml
rplan/: Cargo.toml
rplan/src/: analyzer.rs  context.rs  db.rs  error.rs  main.rs  queue.rs  route.rs  trace_layer.rs
rplan/src/edz/: address.rs  manifest.rs  mod.rs  part.rs  points.rs
rplan/src/model/: company.rs  mod.rs  package.rs  sample.rs
src/: index.html  main.ts
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/interfaces/: archive-information.ts  explorer-item.ts  package-information.ts
src/app/pages/dashboard/: dashboard.component.ts
src/app/pages/file-upload/: file-upload.component.html  file-upload.component.scss  file-upload.component.ts
src/app/pages/file-viewer/: file-viewer.component.html  file-viewer.component.spec.ts  file-viewer.component.ts
src/app/pages/viewer/: viewer.component.html  viewer.component.ts
src/app/services/: backend.service.ts
src/app/shared/accordion/: accordion.component.html  accordion.component.scss  accordion.component.ts
src/app/shared/card/: card.component.html  card.component.ts
