[package]
name = "rplan"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "898b728"

[package.metadata.vcpkg.target.x86_64-pc-windows-msvc]
triplet = "x64-windows-static-md"
dependencies = ["libarchive"]

[dependencies]

[dependencies.axum]
version = "0.7.5"
features = ["multipart"]

[dependencies.blake3]
version = "1.5.1"
features = ["rayon"]

[dependencies.bson]
version = "2.9.0"
features = ["time-0_3"]

[dependencies.clap]
version = "4.5.2"
features = ["derive", "env"]

[dependencies.tokio]
version = "1.36.0"
features = ["fs", "macros", "rt-multi-thread", "sync"]
