[package]
name = "rplan"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "898b728"

[package.metadata.vcpkg.target.x86_64-pc-windows-msvc]
triplet = "x64-windows-static-md"
dependencies = ["libarchive"]

[dependencies]

[dependencies.axum]
version = "0.7.5"
features = ["multipart"]

[dependencies.blake3]
version = "1.5.1"
features = ["rayon"]

[dependencies.bson]
version = "2.9.0"
features = ["time-0_3"]

[dependencies.clap]
version = "4.5.2"
features = ["derive", "env"]

[dependencies.quick-xml]
version = "0.31.0"
features = ["serialize", "async-tokio"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.time]
version = "0.3.34"
features = ["serde"]

[dependencies.tokio]
version = "1.36.0"
features = ["fs", "macros", "rt-multi-thread", "sync"]

[dependencies.tokio-util]
version = "0.7.10"
features = ["io"]

[dependencies.tower-http]
version = "0.5.2"
features = ["compression-gzip", "normalize-path", "trace"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.url]
version = "2.5.0"
features = ["serde"]
